# Tun2Socks

./: CMakeLists.txt  README.MD
src/: conntrack.cpp  get_ifconfig.cpp  socksify_darwin.cpp  socksify_linux.cpp
test/: my_test.cpp
