cmake_minimum_required(VERSION 3.24)
project(Tun2Socks)
message(STATUS "operation system is ${CMAKE_SYSTEM_NAME}")
set(CMAKE_CXX_STANDARD 11)

file(GLOB_RECURSE native_srcs src/[^so]*.cpp)
if (0)
    add_executable(Tun2Socks test/my_test.cpp)
elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
    message(STATUS "use socksify_linux.cpp")
    add_executable(Tun2Socks ${native_srcs} src/socksify_linux.cpp)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    message(STATUS "use socksify_darwin.cpp")
    add_executable(Tun2Socks ${native_srcs} src/socksify_darwin.cpp)
endif ()
